# open-space-toolkit-core

./: .codecov.yml  .gitignore  .travis.yml  .yo-rc.json  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  Tutorial.md  configure  index.html
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflow/: openspacetoolkitcore-ci.yml
_autosummary/: ostk.core.container.get_integer_array.rst  ostk.core.container.set_double_array.rst  ostk.core.container.set_int_array.rst  ostk.core.container.set_string_array.rst  ostk.core.filesystem.Directory.rst  ostk.core.filesystem.File.rst  ostk.core.filesystem.PermissionSet.rst  ostk.core.type.Real.rst
_build/html/: cpp.html  (+10 more)
binder/: postBuild  requirements.txt  runtime.txt  start
bindings/julia/: CMakeLists.txt
bindings/julia/src/: OpenSpaceToolkitCoreJl.cxx
bindings/julia/src/OpenSpaceToolkitCoreJl/: Types.cpp
bindings/julia/src/OpenSpaceToolkitCoreJl/Types/: Integer.cpp
bindings/julia/tools/julia/: Manifest.toml  ostk.jl.in
bindings/python/: CMakeLists.txt  README.md  pyproject.toml  requirements.txt
bindings/python/docs/: Reference.ipynb
bindings/python/src/: LibraryCorePy.cxx  OpenSpaceToolkitCorePy.cxx
bindings/python/src/LibraryCorePy/: Containers.cpp  FileSystem.cpp  Types.cpp
bindings/python/src/LibraryCorePy/Containers/: Array.cpp
bindings/python/src/LibraryCorePy/FileSystem/: Directory.cpp  File.cpp  Path.cpp  PermissionSet.cpp
bindings/python/src/LibraryCorePy/Types/: Integer.cpp  Real.cpp  String.cpp
bindings/python/src/OpenSpaceToolkitCorePy/: Container.cpp  Containers.cpp  FileSystem.cpp  Logger.cpp  Type.cpp  Types.cpp
bindings/python/src/OpenSpaceToolkitCorePy/Container/: Array.cpp  Dictionary.cpp  Object.cpp
bindings/python/src/OpenSpaceToolkitCorePy/Containers/: Array.cpp  ArrayCasting.hpp  Dictionary.cpp  Object.cpp
bindings/python/src/OpenSpaceToolkitCorePy/FileSystem/: Directory.cpp  File.cpp  Path.cpp  PermissionSet.cpp
bindings/python/src/OpenSpaceToolkitCorePy/Type/: Integer.cpp  Real.cpp  RealTypeCaster.hpp  Sign.cpp  String.cpp
bindings/python/src/OpenSpaceToolkitCorePy/Types/: Integer.cpp  Real.cpp  Sign.cpp  String.cpp
bindings/python/src/OpenSpaceToolkitCorePy/Utilities/: ShiftToString.hpp
bindings/python/test/: __init__.py  test.sh
bindings/python/test/containers/: __init__.py  test_array.py  test_dictionary.py  test_object.py
bindings/python/test/core/: test_logger.py
bindings/python/test/filesystem/: __init__.py  test_directory.py  test_file.py  test_path.py  test_permissionset.py
bindings/python/test/logger/: test_logger.py
bindings/python/test/type_/: Sign.test.py
bindings/python/test/types/: __init__.py  test_integer.py  test_real.py  test_sign.py  test_string.py
bindings/python/test/types_/: __init__.py  test_integer.py  test_real.py  test_sign.py  test_string.py
bindings/python/tools/python/: pyproject.toml.in  setup.cfg.in  setup.py.in
bindings/python/tools/python/library_/core_/: __init__.py
bindings/python/tools/python/ostk/core/: __init__.py
docs/: CMakeLists.txt  Tutorial.md  conf.py  index.html
doxygen/: Doxyfile.in
html/: Array_8hpp.html  Array_8hpp_source.html  Array_8test_8cpp.html  ByteArray_8hpp.html  ByteArray_8hpp_source.html  Byte_8hpp.html  Byte_8hpp_source.html  CPU_8hpp.html  CPU_8hpp_source.html  Console_8hpp.html  Console_8hpp_source.html  Dictionary_8hpp.html  Dictionary_8hpp_source.html  Directory_8hpp.html  Directory_8hpp_source.html  Disk_8hpp.html  Disk_8hpp_source.html  Error_8hpp.html  Error_8hpp_source.html  Exception_8cpp.html  Exception_8hpp.html  Exception_8hpp_source.html  File_8hpp.html  File_8hpp_source.html  Global_8test_8hpp.html  Global_8test_8hpp_source.html  Graph_8hpp.html  Graph_8hpp_source.html  Group_8hpp.html  Group_8hpp_source.html  Index_8hpp.html  Index_8hpp_source.html  Integer_8cpp.html  Integer_8hpp.html  Integer_8hpp_source.html  Integer_8test_8cpp.html  LibraryCorePy_8cxx.html  List_8hpp.html  List_8hpp_source.html  Logger_8hpp.html  (+922 more)
latex/: Array_8hpp.tex  Array_8test_8cpp.tex  ByteArray_8hpp.tex  Byte_8hpp.tex  CPU_8hpp.tex  Console_8hpp.tex  Dictionary_8hpp.tex  Directory_8hpp.tex  Disk_8hpp.tex  Error_8hpp.tex  Exception_8cpp.tex  Exception_8hpp.tex  File_8hpp.tex  Global_8test_8hpp.tex  Graph_8hpp.tex  Group_8hpp.tex  Index_8hpp.tex  Integer_8cpp.tex  Integer_8hpp.tex  Integer_8test_8cpp.tex  LibraryCorePy_8cxx.tex  List_8hpp.tex  Logger_8hpp.tex  Main_8test_8cxx.tex  Map_8hpp.tex  Memory_8hpp.tex  Object_8hpp.tex  OrderedMap_8hpp.tex  Pair_8hpp.tex  Pair_8test_8cpp.tex  Path_8hpp.tex  PermissionSet_8hpp.tex  Print_8cpp.tex  Print_8hpp.tex  Process_8hpp.tex  Program_8hpp.tex  Pump_8hpp.tex  Queue_8hpp.tex  Real_8cpp.tex  Real_8hpp.tex  (+420 more)
leak/: leak.cpp
share/python/: CMakeLists.txt  README.md
share/python/notebooks/: Tutorial.ipynb
share/python/notebooks/.ipynb_checkpoints/: Tutorial-checkpoint.ipynb
share/python/src/: LibraryCorePy.cxx
share/python/src/LibraryCorePy/: Containers.cpp  Types.cpp
share/python/src/LibraryCorePy/Containers/: Array.cpp
share/python/src/LibraryCorePy/Types/: Integer.cpp  Real.cpp  String.cpp
share/python/test/: test.sh
share/python/tools/python/: setup.py.in
share/python/tools/python/Core/: __init__.py
test/: Global.test.hpp  Main.test.cxx  Setup.test.hpp
tools/: .env
xml/: _array_8hpp.xml  _array_8tpp.xml  _byte_8hpp.xml  _byte_array_8hpp.xml  _c_p_u_8hpp.xml  _cell_8hpp.xml  _console_8hpp.xml  _dictionary_8cpp.xml  _dictionary_8hpp.xml  _directory_8cpp.xml  _directory_8hpp.xml  _disk_8hpp.xml  _enum_helper_8hpp.xml  _error_8hpp.xml  _exception_8cpp.xml  _exception_8hpp.xml  _file_8cpp.xml  _file_8hpp.xml  _file_system_8hpp.xml  _graph_8hpp.xml  _group_8hpp.xml  _index_8hpp.xml  _integer_8cpp.xml  _integer_8hpp.xml  _list_8hpp.xml  _logger_8hpp.xml  _map_8hpp.xml  _memory_8hpp.xml  _object_8cpp.xml  _object_8hpp.xml  _ordered_map_8hpp.xml  _pair_8hpp.xml  _path_8cpp.xml  _path_8hpp.xml  _permission_set_8cpp.xml  _permission_set_8hpp.xml  _print_8cpp.xml  _print_8hpp.xml  _process_8hpp.xml  _program_8hpp.xml  (+124 more)
(+577 files in other folders)
